unpackaged/main/default/objects/BRIOLabs_Log__c/BRIOLabs_Log__c.object-meta.xml
<CustomObject>
    <label>BRIOLabs Log</label>
    <nameField>
        <displayFormat>BLL-{0000}</displayFormat>
        <label>BRIOLabs Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BRIOLabs Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>