unpackaged/main/default/objects/BRIOLabs_Log__c/fields/Flow_User__c.field-meta.xml
<CustomField>
    <fullName>Flow_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Flow User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BRIOLabs_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>