unpackaged/main/default/objects/BRIOLabs_Log__c/fields/Log_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Log_Record_Id__c</fullName>
    <label>Log Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>