unpackaged/main/default/objects/BRIOLabs_Log__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BRIOLabs Logs</relationshipLabel>
    <relationshipName>BRIOLabs_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>