unpackaged/main/default/objects/BRIOLabs_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Log_Type__c</columns>
    <columns>Flow_Name__c</columns>
    <columns>Flow_User__c</columns>
    <columns>Log_Date_Time__c</columns>
    <columns>Log_Message__c</columns>
    <columns>Log_Record_Id__c</columns>
    <columns>Intake__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>