unpackaged/main/default/objects/BRIOLabs_Log__c/listViews/Automated_Comm_Logs.listView-meta.xml
<ListView>
    <fullName>Automated_Comm_Logs</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Log_Type__c</columns>
    <columns>Flow_Name__c</columns>
    <columns>Flow_User__c</columns>
    <columns>Log_Date_Time__c</columns>
    <columns>Log_Message__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Flow_Name__c</field>
        <operation>equals</operation>
        <value>BRIO_Drip_Call_Count_Automations</value>
    </filters>
    <filters>
        <field>Flow_Name__c</field>
        <operation>equals</operation>
        <value>BRIO_Drip_Comms_Sending_Subflow</value>
    </filters>
    <label>Automated Comm Logs</label>
</ListView>