unpackaged/main/default/objects/BRIOLabs_Log__c/listViews/Campaign_Partner_Distribution.listView-meta.xml
<ListView>
    <fullName>Campaign_Partner_Distribution</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Log_Type__c</columns>
    <columns>Flow_Name__c</columns>
    <columns>Flow_User__c</columns>
    <columns>Log_Message__c</columns>
    <columns>Intake__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Flow_Name__c</field>
        <operation>equals</operation>
        <value>BRIO_Intake_Campaign_Partner_Distribution</value>
    </filters>
    <label>Campaign Partner Distribution</label>
</ListView>