unpackaged/main/default/objects/BRIOLabs_Log__c/listViews/Five9_List_Item_Create.listView-meta.xml
<ListView>
    <fullName>Five9_List_Item_Create</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Log_Type__c</columns>
    <columns>Flow_Name__c</columns>
    <columns>Flow_User__c</columns>
    <columns>Log_Message__c</columns>
    <columns>Intake__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Flow_Name__c</field>
        <operation>equals</operation>
        <value>BRIO_Intake_Update_Create_Five9_List_Item</value>
    </filters>
    <filters>
        <field>Flow_Name__c</field>
        <operation>equals</operation>
        <value>BRIO_Intake_Create_Create_Five9_List_Item</value>
    </filters>
    <label>Five9 List Item Create</label>
</ListView>