unpackaged/main/default/objects/BRIOLabs_Log__c/listViews/Tekmir_API.listView-meta.xml
<ListView>
    <fullName>Tekmir_API</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Log_Type__c</columns>
    <columns>Flow_Name__c</columns>
    <columns>Flow_User__c</columns>
    <columns>Log_Message__c</columns>
    <columns>Intake__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Flow_Name__c</field>
        <operation>contains</operation>
        <value>Tekmir</value>
    </filters>
    <label>Tekmir API</label>
</ListView>